# pymfx

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md  quickstart.md
notebooks/: 01_quickstart.ipynb  02_build_from_scratch.ipynb  03_visualization.ipynb  04_convert.ipynb  05_stats_datascience.ipynb  06_viz_advanced.ipynb  07_utils.ipynb
pymfx/: __init__.py  anomaly.py  checksum.py  cli.py  fair.py  models.py  parser.py  utils.py  validator.py  writer.py
pymfx/convert/: __init__.py  from_csv.py  from_geojson.py  from_gpx.py  to_csv.py  to_geojson.py  to_gpx.py  to_kml.py
pymfx/viz/: __init__.py  map.py  profile.py  timeline.py  trajectory_3d.py
quickstart/: index.html
search/: search_index.json
tests/: example_minimal.mfx  test_anomaly.py  test_convert.py  test_parser.py  test_utils.py  test_validator.py  test_viz.py  test_viz_extra.py  test_writer.py
