[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymfx"
version = "1.0.0"
description = "Python library for the Mission Flight Exchange (.mfx) v1.0 format"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["uav", "drone", "mfx", "mission", "flight", "FAIR", "UAV", "remote-sensing"]
authors = [
    { name = "pymfx contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# No runtime dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
viz = [
    "folium>=0.14",
    "matplotlib>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "folium>=0.14",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "folium>=0.14",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/jabahm/pymfx"
Documentation = "https://github.com/jabahm/pymfx"
Repository = "https://github.com/jabahm/pymfx"
Changelog = "https://github.com/jabahm/pymfx/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/jabahm/pymfx/issues"

[project.scripts]
pymfx = "pymfx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymfx*"]

[tool.setuptools.package-data]
pymfx = ["py.typed"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# --- coverage ---
[tool.coverage.run]
source = ["pymfx"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# --- ruff (linter) ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

# --- mypy ---
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
